plugins {
    id 'java'
    id 'maven-publish'
    id 'net.neoforged.gradleutils'
}

group = "net.neoforged.jst"
gradleutils {
    setupCentralPublishing()
    version {
        branches.suffixBranch()
    }
}
project.version = gradleutils.version

println "Version ${project.version}"

subprojects {
    group = rootProject.group
    version = rootProject.version

    apply plugin : "java"

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    // ensure everything uses UTF-8 and not some random codepage chosen by gradle
    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }
}
